syntax = "proto3";
package users.v1;
option go_package = "users-grpc/proto;proto";

import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest { string name = 1; int32 age = 2; string address = 3; }
message CreateUserResponse { User user = 1; }

message GetUserRequest { int64 id = 1; }
message GetUserResponse { User user = 1; }

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
}
message UpdateUserResponse { User user = 1; }

message DeleteUserRequest { int64 id = 1; }
message DeleteUserResponse { bool ok = 1; }

message ListUsersRequest { int32 page = 1; int32 page_size = 2; }
message ListUsersResponse { repeated User users = 1; int64 total = 2; }

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser    (GetUserRequest)    returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers  (ListUsersRequest)  returns (ListUsersResponse);
}
